--- a/src/App.css
+++ b/src/App.css
@@ -95,12 +95,11 @@
 /* From Uiverse.io by Gaurav-WebDev */ 
 .button {
   height: 50px;
-  width: 200px;
+  width: 100%;
   position: relative;
   background-color: transparent;
   cursor: pointer;
-  border: 2px solid white;
-  overflow: hidden;
+  border: 1px solid white;
   border-radius: 30px;
   color: white;
   transition: all 0.5s ease-in-out;
@@ -112,27 +111,6 @@
   letter-spacing: 4px;
 }
 
-.type1::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  transition: all 0.5s ease-in-out;
-  background-color: #333;
-  border-radius: 30px;
-  visibility: hidden;
-  height: 10px;
-  width: 10px;
-  z-index: -1;
-}
-
 .button:hover {
-  box-shadow: 1px 1px 200px #252525;
-  color: #fff;
-  border: none;
-}
-
-.type1:hover::after {
-  visibility: visible;
-  transform: scale(100) translateX(2px);
+  transform: scale(1.03);
 }
