--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Inter", sans-serif !important;
 }
 body {
-  background-color: #1c1c1c; /* Darker background, closer to Supabase style */
+  background-color: #1c1c1c; 
   color: white;
 }
 main {
@@ -30,16 +30,16 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #2a2a2a; /* Slightly lighter than body, but still dark */
+  background-color: #2a2a2a; 
   padding: 2em 2em;
   width: 100%;
   max-width: 500px;
-  border-radius: 4px; /* Slightly rounded corners */
+  border-radius: 4px; 
   box-shadow: 0 0 60px rgba(0, 0, 0, 0.2);
   border-top: 5px;
   border-width: 10px 0px 0px 0px;
   border-style: solid;
-  border-color: #3ecf8e; /* Supabase green */
+  border-color: #3ecf8e; 
 }
 #github-repo-link {
   display: flex;
@@ -50,7 +50,7 @@ a {
   font-weight: bold;
   background: none;
   cursor: pointer;
-  color: #3ecf8e; /* Supabase green */
+  color: #3ecf8e; 
 }
 #github-repo-link:hover {
   background-color: rgba(
@@ -58,14 +58,14 @@ a {
     207,
     142,
     0.1
-  ); /* Supabase green with low opacity */
+  ); 
 }
 input {
   padding: 1rem;
   border-radius: 4px;
   outline: none;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  background-color: #3a3a3a; /* Slightly lighter than container background */
+  background-color: #3a3a3a; 
   border: 1px solid #4a4a4a;
   font-size: 1rem;
   color: white;
@@ -79,7 +79,7 @@ a {
   background: none;
   cursor: pointer;
   color: white;
-  background: #229f65; /* Supabase green */
+  background: #229f65; 
   border: none;
   border-radius: 4px;
   transition: background-color 0.3s;
@@ -91,7 +91,7 @@ a {
   align-items: center;
   height: 40px;
   font-weight: bold;
-  border: 1px solid #33b379; /* Supabase green */
+  border: 1px solid #33b379; 
 }
 
 a {
@@ -99,14 +99,14 @@ a {
 }
 button:hover,
 a:hover {
-  background: #2ebd80; /* Slightly darker Supabase green for hover */
+  background: #2ebd80; 
 }
 .home-link {
   margin-bottom: 1em;
 }
 .auth-link {
   background: transparent;
-  color: #3ecf8e; /* Supabase green */
+  color: #3ecf8e; 
 }
 .auth-link:hover {
   background: transparent;
@@ -115,7 +115,7 @@ a:hover {
 #divider {
   width: 70%;
   height: 2px;
-  background-color: #3ecf8e; /* Supabase green */
+  background-color: #3ecf8e;
   margin: 1em 0;
   border-radius: 100%;
-}
+} */
